--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ subprojects {
 	// Enable access to artefact dependency repositories.
 	repositories {
 		// Standard Maven repository.
-		mavenCentral()
+		maven { url "https://repo.maven.apache.org/maven2" }
 	}
 }
 
